<resources>
    <string name="app_name">MyPreference</string>
    <string name="text_home">Home</string>
    <string name="click_me">Click me</string>
    <string name="menu_history">History</string>

    // наполнение item_history - карточка
    <string name="description">Description</string>
    <string name="player_one">Player one</string>
    <string name="points_one">Points one</string>
    <string name="player_two">Player two</string>
    <string name="points_two">Points two</string>
    <string name="player_three">Player three</string>
    <string name="points_three">Points three</string>
    <string name="player_four">Player four</string>
    <string name="points_four">Points four</string>

    <string name="new_game">New game</string>
    <string name="snackbar_action">Error</string>

    <string name="logout_dialog_title">Log out of your account?</string>
    <string name="logout_dialog_message">"All your notes will be saved. You will be able to access
        them after logging in "</string>
    <string name="logout_dialog_cancel">Cancel</string>
    <string name="ok_bth_title" translatable="false">OK</string>
    <string name="logout_menu_title">Logout</string>
    <string name="delete_menu_title">Delete</string>
    <string name="change_color_menu_title">Color</string>
    <string name="delete_dialog_message">Delete?</string>
    <string name="cancel_btn_title">Cancel</string>

    <!-- Navigation -->
    <string name="setting">Setting</string>
    <string name="history">History</string>
    <string name="reserved">Reserved</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_header_title" translatable="false">AlexSPb</string>
    <string name="nav_header_subtitle" translatable="false">3416216@gmail.com</string>

</resources>