<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin8"
    android:layout_marginTop="@dimen/margin4"
    android:layout_marginRight="@dimen/margin8"
    android:layout_marginBottom="@dimen/margin4"
    card_view:cardCornerRadius="@dimen/margin2"
    card_view:cardElevation="@dimen/margin2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:orientation="vertical">

    <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_history" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_player_one"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_history" />
            <TextView
                android:id="@+id/text_points_player_one"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_one"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_player_two"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_history" />
            <TextView
                android:id="@+id/text_points_player_two"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_two"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_player_three"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_three"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_history" />
            <TextView
                android:id="@+id/text_points_player_three"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_three"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_player_four"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_four"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_history" />
            <TextView
                android:id="@+id/text_points_player_four"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_four"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_history" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
