<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reserved_1"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/reserved" />
        <item
            android:id="@+id/nav_reserved_2"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/reserved" />
        <item
            android:id="@+id/nav_reserved_3"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/reserved" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_edu_24"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>
</menu>